...
    }
    
    //when the delete button is pressed an action sheet apears to confirm deleting the photo
    @IBAction func binButton(sender: AnyObject) {
        if (titleField.text != nil && titleField.text != "") && (urlField.text != nil && urlField.text != ""){

            let optionMenu = UIAlertController(title: "Confirm Delete", message: "Do you really want to delete \(titleField.text!)", preferredStyle: .ActionSheet)
            
            let deleteAction = UIAlertAction(title: "Delete", style: .Destructive, handler: {
                (alert: UIAlertAction!) -> Void in
                self.delegate?.binPressed(self)
                self.delegate?.update(self)
                self.navigationController?.popToRootViewControllerAnimated(true)
            })
          
...
