...
                        </cells>
                        <connections>
                            <outlet property="dataSource" destination="VXL-sC-uov" id="nnU-Vz-9SO"/>
                            <outlet property="delegate" destination="VXL-sC-uov" id="jPz-dC-Ydo"/>
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="Photo Collection" id="YcK-If-qiu">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="qcx-pR-cI0">
                            <color key="tintColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <segue destination="TCx-DE-08r" kind="show" identifier="addButton" id="8iT-kS-47N"/>
                            </connections>
                        </barButtonItem>
...
                            <constraint firstItem="UJW-Zb-uVG" firstAttribute="trailing" secondItem="EcV-Df-joR" secondAttribute="trailingMargin" id="dlL-h2-cq7"/>
                            <constraint firstItem="hzS-6C-tw0" firstAttribute="centerX" secondItem="3h4-KI-wic" secondAttribute="centerX" id="emI-mm-V4L"/>
                            <constraint firstItem="hzS-6C-tw0" firstAttribute="top" secondItem="bTV-Gc-rE7" secondAttribute="top" constant="67" id="i1d-Im-3Xh"/>
                            <constraint firstItem="bTV-Gc-rE7" firstAttribute="top" secondItem="UJW-Zb-uVG" secondAttribute="bottom" constant="-1" id="rfg-U2-qmG"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Photo" id="4aw-bp-gDy">
                        <barButtonItem key="backBarButtonItem" title="Back" id="d1a-4X-y81"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="trash" id="DaZ-JA-gYX" userLabel="Bin Button">
                            <color key="tintColor" red="1" green="0.22482779974669165" blue="0.58953232959792534" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="binButton:" destination="TCx-DE-08r" id="foA-xy-BSt"/>
                            </connections>
...
